force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description
  >Northstar case classification (Customer Support / Billing / Provisioning / Renewal Risk). Drives routing: Provisioning Exceptions and Renewal Risk Cases get owned by their respective queues; the others stay with the inbound owner.</description>
    <inlineHelpText
  >Top-level Case classification. Drives routing.</inlineHelpText>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
                <default>true</default>
                <label>Customer Support</label>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Provisioning</fullName>
            </value>
            <value>
                <fullName>Renewal Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>