force-app/main/default/objects/Case/fields/Escalated_At__c.field-meta.xml
<CustomField>
    <fullName>Escalated_At__c</fullName>
    <description
  >Timestamp of the most recent escalation on this Case. Stamped by the escalation flow alongside Escalated_To_Renewal_Queue__c.</description>
    <inlineHelpText
  >When the Case was last escalated. Auto-stamped — do not edit.</inlineHelpText>
    <label>Escalated At</label>
    <type>DateTime</type>
</CustomField>