force-app/main/default/objects/Case/fields/Escalated_To_Renewal_Queue__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Renewal_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Set true once the Case has been reassigned to the Renewal Risk queue. Used to make the Case routing/escalation flow idempotent on re-run.</description>
    <inlineHelpText
  >True once the Case has been escalated to the Renewal Risk queue.</inlineHelpText>
    <label>Escalated To Renewal Queue</label>
    <type>Checkbox</type>
</CustomField>