force-app/main/default/objects/Case/fields/Provisioning_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Failure_Reason__c</fullName>
    <description
  >Copy of Provisioning_Completed__e.Failure_Reason when this Case was raised for a provisioning failure. Lets reps see the failure text without joining back to the platform event log.</description>
    <inlineHelpText
  >Provisioning failure reason text. Captured at Case creation.</inlineHelpText>
    <label>Provisioning Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>