force-app/main/default/objects/Case/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >For Case_Category__c = 'Renewal Risk': the Contract at risk. Stamped by the Renewal_Risk_Raised__e subscriber when raising a renewal-risk Case.</description>
    <inlineHelpText
  >The Contract this Case is about (for Renewal Risk category).</inlineHelpText>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>