force-app/main/default/objects/Case/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >For Case_Category__c = 'Provisioning': the Order whose provisioning produced the exception. Stamped by the Provisioning_Completed__e subscriber when Status='Failed'.</description>
    <inlineHelpText
  >The Order whose provisioning produced this Case (for Provisioning category).</inlineHelpText>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>