force-app/main/default/objects/Case/fields/Renewal_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Risk_Level__c</fullName>
    <description
  >Coarse renewal-risk classification on a Renewal Risk Case (Low/Medium/High/Critical). Inline value set (not GVS) because Account uses an independently revisable picklist with the same labels — kept distinct per the issue authors' pattern.</description>
    <inlineHelpText
  >Renewal risk for this Case: Low / Medium / High / Critical.</inlineHelpText>
    <label>Renewal Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>