force-app/main/default/objects/Case/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description
  >Free-text capture of why the Case was assigned to its current queue owner. Stamped by CaseTriggerHandler from Case_Routing_Reason__mdt after the Case AssignmentRule fires (the rule has no native arbitrary-field update). Mirrors Lead.Routing_Reason__c. Built in — the Case half, which deferred.</description>
    <inlineHelpText
  >Last routing decision explanation. Overwritten on every re-route — do not rely on manual edits.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>