force-app/main/default/objects/Case/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <businessProcess>Billing_Process</businessProcess>
    <description
  >Billing-related cases (invoicing, PO updates, refunds).</description>
    <label>Billing</label>
</RecordType>