force-app/main/default/objects/Case/recordTypes/Customer_Support.recordType-meta.xml
<RecordType>
    <fullName>Customer_Support</fullName>
    <active>true</active>
    <businessProcess>Customer_Support_Process</businessProcess>
    <description>Customer support tickets — the default category.</description>
    <label>Customer Support</label>
</RecordType>