force-app/main/default/objects/Case/recordTypes/Provisioning.recordType-meta.xml
<RecordType>
    <fullName>Provisioning</fullName>
    <active>true</active>
    <businessProcess>Provisioning_Process</businessProcess>
    <description
  >Cases raised by Provisioning_Completed__e Status=Failed. Owned by the Provisioning Exceptions queue.</description>
    <label>Provisioning</label>
</RecordType>