force-app/main/default/objects/Case/recordTypes/Renewal_Risk.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Risk</fullName>
    <active>true</active>
    <businessProcess>Renewal_Risk_Process</businessProcess>
    <description
  >Cases raised by Renewal_Risk_Raised__e. Owned by the Renewal Risk queue once escalated.</description>
    <label>Renewal Risk</label>
</RecordType>