force-app/main/default/objects/Case/listViews/Provisioning_Exceptions.listView-meta.xml
<ListView>
    <fullName>Provisioning_Exceptions</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Category__c</columns>
    <columns>Provisioning_Failure_Reason__c</columns>
    <columns>Related_Order__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Category__c</field>
        <operation>equals</operation>
        <value>Provisioning</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Provisioning Exceptions</label>
</ListView>